--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Ken Dacanay Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/kdacanay/resume/raw/master/Ken%20Resume%202019.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/kdacanay/resume/raw/master/KPRDResume2020.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
 
